capstoneproject/backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pradhiregistry.azurecr.io/backend:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: acr-auth
